--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -68,6 +68,7 @@
                             <option>2</option>
                             <option>3</option>
                             <option>4</option>
+                            <option>5</option>
                         </select>
                     </li>
                     <li class="active" style="padding: 10px 15px;">
