Added line chart partial view and line charting to charts.JS and added both partial views to the Dashboard.cshtml

--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -175,8 +175,8 @@
                                 <div class="header">
                                     <h4 class="title">Line Graph</h4>
                                 </div>
-                                <div class="content">
-
+                                <div class="content">   
+                                    @{ Html.RenderPartial("_LineChart");}                
                                 </div>
                             </div>
                         </div>
