--- a/FirstIteration/Views/Chart/_LineChart.cshtml
+++ b/FirstIteration/Views/Chart/_LineChart.cshtml
@@ -1,4 +1,4 @@
 ﻿<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="../../Scripts/Chart.js"></script>
-<div id="visualization" style="width:100%; height:100%">
-</div> 
+<div id="chart_div" style="width:100%; height:100%">
+</div>  
