--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -1,4 +1,4 @@
-﻿    @{
+﻿@{
     Layout = null;
 }
 
@@ -10,8 +10,6 @@
 <script src="../../Scripts/bootstrap-checkbox-radio-switch.js"></script>
 <!--  Charts Plugin -->
 <script src="../../Scripts/chartist.min.js"></script>
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script src="../../Scripts/BarChart.js"></script>
 <!--  Notifications Plugin    -->
 <script src="../../Scripts/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
@@ -42,7 +40,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="../../img/sidebar-5.jpg">
+        <div class="sidebar" data-color="blue" data-image="../../img/sidebar-6.jpg">
             <!--
 
                 Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
@@ -55,12 +53,11 @@
                         Data Sort Selection
                     </a>
                 </div>
-                <ul class="nav">
-                    <li class="active" style="border-bottom: 1px solid rgba(255, 255, 255, 0.2); padding: 10px 15px;">
-                        <p>Views</p>
-                        <label class="radio-inline"><input type="radio" name="optradio">Graphical</label>
-                        <label class="radio-inline"><input type="radio" name="optradio">Tabular</label>                    
-                    </li>              
+                <div class="btn-group btn-group-lg" style="background-color: yellow; border-radius: 12px; position: relative; left: 5%; top: 10px">
+                    <button type="button" class="btn btn-primary" autofocus="true">Graphical</button>
+                    <button type="button" class="btn btn-primary">Tabular</button>
+                </div>
+                <ul class="nav">   
                     <li class="active" style="padding: 10px 15px;">
                         <label for="sel1">Department:</label>
                         <select class="form-control" style="width: 80%" id="sel1">
@@ -147,7 +144,7 @@
                                     <h4 class="title">Data Statistics</h4>
                                 </div>
                                 <div class="content">
-                                    
+                                    @{ Html.RenderPartial("_Stats");} 
                                 </div>
                             </div>
                         </div>
@@ -157,7 +154,7 @@
                                     <h4 class="title">Data Statistics</h4>
                                 </div>
                                 <div class="content">
-
+                                    @{ Html.RenderPartial("_Table");}                                    
                                 </div>
                             </div>
                         </div>
@@ -167,7 +164,7 @@
                                     <h4 class="title">Budget Comparison</h4>
                                 </div>
                                 <div class="content">
-
+                                    @{ Html.RenderPartial("_PieChart");}                                   
                                 </div>
                             </div>
                         </div>
@@ -178,8 +175,8 @@
                                 <div class="header">
                                     <h4 class="title">Line Graph</h4>
                                 </div>
-                                <div class="content">
-
+                                <div class="content">   
+                                    @{ Html.RenderPartial("_LineChart");}                
                                 </div>
                             </div>
                         </div>
@@ -189,8 +186,7 @@
                                     <h4 class="title">Bar Graph</h4>
                                 </div>
                                 <div class="content">
-                                    <div id="visualization" style="width:100%; height:100%">
-                                    </div>                                
+                                    @{ Html.RenderPartial("_BarChart");}                               
                                 </div>
                             </div>
                         </div>
