Added Highcharts, connected to AzureDB and uploaded data to AzureDB

--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -9,7 +9,7 @@
 <!--  Checkbox, Radio & Switch Plugins -->
 <script src="../../Scripts/bootstrap-checkbox-radio-switch.js"></script>
 <!--  Charts Plugin -->
-<script src="../../Scripts/chartist.min.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
 <!--  Notifications Plugin    -->
 <script src="../../Scripts/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
