--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-
+@model FirstIteration.Models.transcendenceEntities
 <!doctype html>
 <!--   Core JS Files   -->
 <script src="../../Scripts/jquery-1.10.2.js" type="text/javascript"></script>
@@ -10,6 +10,8 @@
 <script src="../../Scripts/bootstrap-checkbox-radio-switch.js"></script>
 <!--  Charts Plugin -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<!-- DropDownList Data -->
+<script src="../../Scripts/Testing.js"></script>
 <!--  Notifications Plugin    -->
 <script src="../../Scripts/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
@@ -60,15 +62,19 @@
                 <ul class="nav">   
                     <li class="active" style="padding: 10px 15px;">
                         <label for="sel1">Department:</label>
-                        @Html.DropDownList("Department", (IEnumerable<SelectListItem>)ViewBag.Department, String.Empty, new { @class = "form-control" })
+                        @Html.DropDownListFor(m => m.Departments , (SelectList)ViewBag.Department, "--Select Department--", new { @class = "form-control", id = "ddldepartment" })
                     </li>
                     <li class="active" style="padding: 10px 15px;">
                         <label for="sel1">Funding Source:</label>
-                        @Html.DropDownList("FundingSource", (IEnumerable<SelectListItem>)ViewBag.FundingSource, String.Empty, new { @class = "form-control" })
+                        <select id="ddlfunding" name="funding_source" class="form-control">
+                            <option value="">--Select Funding Source--</option>
+                        </select>
                     </li>
                     <li class="active" style="padding: 10px 15px;">
-                        <label for="sel1">Employee:</label>
-                        @Html.DropDownList("Staff", (IEnumerable<SelectListItem>)ViewBag.Staff, String.Empty, new { @class = "form-control" })
+                        <label for="sel1">Employee:</label>                        
+                        <select id="ddlstaff" name="staff_id" class="form-control">
+                            <option value="">--Select Staff Member--</option>
+                        </select>
                     </li>
                 </ul>
             </div>
