started working on json for generating chart

--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -10,6 +10,8 @@
 <script src="../../Scripts/bootstrap-checkbox-radio-switch.js"></script>
 <!--  Charts Plugin -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 <!-- DropDownList Data -->
 <script src="../../Scripts/Testing.js"></script>
 <!--  Notifications Plugin    -->
@@ -75,6 +77,9 @@
                         <select id="ddlstaff" name="staff_id" class="form-control">
                             <option value="">--Select Staff Member--</option>
                         </select>
+                    </li>
+                    <li class="active" style="padding: 10px 15px;">
+                        <button type="button" class="form-control" id="generate">Click Me!</button>
                     </li>
                 </ul>
             </div>
