--- a/FirstIteration/Views/Chart/_BarChart.cshtml
+++ b/FirstIteration/Views/Chart/_BarChart.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="../../Scripts/HighCharts.js"></script>
+<script src="../../Scripts/DashboardCharts.js"></script>
 <div id="visualization" style="width:100%; height:100%">
 </div> 
