--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -8,13 +8,17 @@
 <script src="../../Scripts/bootstrap.min.js" type="text/javascript"></script>
 <!--  Checkbox, Radio & Switch Plugins -->
 <script src="../../Scripts/bootstrap-checkbox-radio-switch.js"></script>
+<script src="../../Scripts/LoadLists.js"></script>
+<script>
+        $(document).ready(function () {
+            $("#loadpartial").load('/Chart/_FundingSourceDropDowns');
+        });
+</script>
 <!--  Charts Plugin -->
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="~/Scripts/DashboardCharts.js"></script>
-<!-- DropDownList Data -->
-<script src="../../Scripts/DropDownLists.js"></script>
 <!--  Notifications Plugin    -->
 <script src="../../Scripts/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
@@ -58,31 +62,16 @@
                         Data Sort Selection
                     </a>
                 </div>
-                <div class="btn-group btn-group-lg" style="background-color: yellow; border-radius: 12px; position: relative; left: 5%; top: 10px">
-                    <button type="button" class="btn btn-primary" autofocus="true">Graphical</button>
-                    <button type="button" class="btn btn-primary">Tabular</button>
+                <div class="btn-group" style="background-color: yellow; border-radius: 12px; position: relative; left: 5%; top: 10px" id="filterDay" data-toggle="buttons">
+                    <label class="btn btn-primary active">
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked="checked" value="1"> Funding Source
+                    </label>
+                    <label class="btn btn-primary">
+                        <input type="radio" name="options" id="option2" autocomplete="off" value="2"> Employee
+                    </label>
                 </div>
-                <ul class="nav">   
-                    <li class="active" style="padding: 10px 15px;">
-                        <label for="sel1">Department:</label>
-                        @Html.DropDownListFor(m => m.Departments , (IEnumerable<SelectListItem>)ViewBag.Department, "--Select Department--", new { @class = "form-control", id = "ddldepartment" })
-                    </li>
-                    <!--<li class="active" style="padding: 10px 15px;">
-                        <label for="sel1">Funding Source:</label>
-                        <select id="ddlfunding" name="funding_source" class="form-control">
-                            <option value="">--Select Funding Source--</option>
-                        </select>
-                    </li>-->
-                    <li class="active" style="padding: 10px 15px;">
-                        <label for="sel1">Employee:</label>                        
-                        <select id="ddlstaff" name="staff_id" class="form-control">
-                            <option value="">--Select Staff Member--</option>
-                        </select>
-                    </li>
-                    <li class="active" style="padding: 10px 15px;">
-                        <button type="button" class="form-control" id="generate">Click Me!</button>
-                    </li>
-                </ul>
+                <div id="loadpartial">
+                </div>
             </div>
         </div>
         <div class="main-panel">
@@ -133,14 +122,14 @@
 
             <div class="content">
                 <div class="container-fluid">
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="col-md-4">
                             <div class="card">
                                 <div class="header">
                                     <h4 class="title">Data Statistics</h4>
                                 </div>
                                 <div class="content">
-                                    <!--@{ Html.RenderPartial("_Stats");}--> 
+                                   
                                 </div>
                             </div>
                         </div>
@@ -150,18 +139,18 @@
                                     <h4 class="title">Data Statistics</h4>
                                 </div>
                                 <div class="content">
-                                   <!-- @{ Html.RenderPartial("_Table");} -->                                    
+                                                                  
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
                                 <div class="content">
-                                    @{ Html.RenderPartial("_PieChart");}                                   
+                                                                       
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="row">
                         <div class="col-md-6">
                             <div class="card">                                
@@ -174,6 +163,15 @@
                             <div class="card">
                                 <div class="content">
                                     @{ Html.RenderPartial("_BarChart");}                               
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card">
+                                <div class="content">
+                                    @{ Html.RenderPartial("_PieChart");}
                                 </div>
                             </div>
                         </div>
