--- a/FirstIteration/Views/Chart/_PieChart.cshtml
+++ b/FirstIteration/Views/Chart/_PieChart.cshtml
@@ -1,5 +1,21 @@
 ﻿<script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="../../Scripts/DashboardCharts.js"></script>
+<script src="../../Scripts/PieCharts.js"></script>
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/Chart/PieData',
+            type: 'post',
+            success: function (data) {
+                if (data != null && data != "") {
+                    drawPie(data);
+                }
+                else {
+                    alert('data is null');
+                }
+            }
+        });
+    });
+</script>
 <div id="pie_div" style="width:100%; height:100%">
 </div>  
