Got button working for depts, working on scripts for loading by fund cat and empl

--- a/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
@@ -7,6 +7,9 @@
 <head>
     <!-- DropDownList Data -->
     <script src="../../Scripts/DropDownLists.js"></script>
+    <script src="../../Scripts/LineCharts.js"></script>
+    <script src="../../Scripts/BarCharts.js"></script>
+    <script src="../../Scripts/PieCharts.js"></script>
 </head>
 <body>
     <div id="FundDDLs" style="width:100%; height:100%">
@@ -21,12 +24,12 @@
                     <option value="">--Select Fund Category--</option>
                 </select>
             </li>
-            <li class="active" style="padding: 10px 15px;">
+            <!--<li class="active" style="padding: 10px 15px;">
                 <label for="sel1">Funding Source:</label>
                 <select id="ddlfundcodename" name="staff_id" class="form-control">
                     <option value="">--Select Fund Code Name--</option>
                 </select>
-            </li>
+            </li>-->
             <li class="active" style="padding: 10px 15px;">
                 <button type="button" class="form-control" id="generate">Click Me!</button>
             </li>
