Configured employee graphs

--- a/FirstIteration/Views/Chart/_EmployeeDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_EmployeeDropDowns.cshtml
@@ -3,6 +3,9 @@
 }
 @model FirstIteration.Models.transcendenceEntities
 <script src="../../Scripts/DropDownLists.js"></script>
+<script src="~/Scripts/PieCharts.js"></script>
+<script src="~/Scripts/LineCharts.js"></script>
+<script src="~/Scripts/BarCharts.js"></script>
 <div id="FundDDLs" style="width:100%; height:100%">
     <ul class="nav">
         <li class="active" style="padding: 10px 15px;">
@@ -16,7 +19,7 @@
             </select>
         </li>
         <li class="active" style="padding: 10px 15px;">
-            <button type="button" class="form-control" id="generate">Click Me!</button>
+            <button type="button" class="form-control" id="employee">Click Me!</button>
         </li>
     </ul>
 </div>
