Edited partial views for charts

--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -154,7 +154,7 @@
                         <div class="col-md-6">
                             <div class="card">                                
                                 <div class="content">   
-                                    @{ Html.RenderPartial("_LineChart");}                
+                                    @{ Html.RenderPartial("_PieChart");}                
                                 </div>
                             </div>
                         </div>
@@ -167,10 +167,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-8 col-md-offset-2">
                             <div class="card">
                                 <div class="content">
-                                    @{ Html.RenderPartial("_PieChart");}
+                                    @{ Html.RenderPartial("_LineChart");}
                                 </div>
                             </div>
                         </div>
