Fixed typo in funding source ddl

--- a/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
@@ -19,7 +19,7 @@
                 @Html.DropDownListFor(m => m.Departments, (IEnumerable<SelectListItem>)ViewBag.Department, "--Select Department--", new { @class = "form-control", id = "ddldepartment" })
             </li>
             <li class="active" style="padding: 10px 15px;">
-                <label for="sel1">Fundinging Category:</label>
+                <label for="sel1">Funding Category:</label>
                 <select id="ddlfundcategory" name="funding_source" class="form-control">
                     <option value="">--Select Fund Category--</option>
                 </select>
