Editted CSS and fixed error message alerts

--- a/FirstIteration/Views/Chart/Dashboard.cshtml
+++ b/FirstIteration/Views/Chart/Dashboard.cshtml
@@ -31,7 +31,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="../../img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Light Bootstrap Dashboard by Creative Tim</title>
+    <title>Clay Behavioral Health Revenue Dashboard</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue" data-image="../../img/sidebar-6.jpg">
+        <div class="sidebar" data-color="blue">
             <!--
 
                 Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
@@ -61,7 +61,7 @@
                         Data Sort Selection
                     </a>
                 </div>
-                <div class="btn-group" style="background-color: yellow; border-radius: 12px; position: relative; left: 5%; top: 10px" id="filterDay" data-toggle="buttons">
+                <div class="btn-group" style="border-radius: 12px; position: relative; left: 5%; top: 10px" id="filterDay" data-toggle="buttons">
                     <label class="btn btn-primary active">
                         <input type="radio" name="options" id="option1" autocomplete="off" checked="checked" value="1"> Funding Source
                     </label>
@@ -83,7 +83,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Clay Behavioral Health Dashboard</a>
+                        <a class="navbar-brand" href="#">Clay Behavioral Health Revenue Dashboard</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         
