--- a/FirstIteration/Views/Chart/_EmployeeDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_EmployeeDropDowns.cshtml
@@ -19,7 +19,7 @@
             </select>
         </li>
         <li class="active" style="padding: 10px 15px;">
-            <button type="button" class="form-control" id="employee">Click Me!</button>
+            <button type="button" class="form-control" id="employee">Submit</button>
         </li>
     </ul>
 </div>
