--- a/FirstIteration/Content/light-bootstrap-dashboard.css
+++ b/FirstIteration/Content/light-bootstrap-dashboard.css
@@ -392,13 +392,7 @@ body > .navbar-collapse[data-color="clay"]:after {
 }
 .sidebar[data-color="blue"]:after,
 body > .navbar-collapse[data-color="blue"]:after {
-  background: #1F77D0;
-  background: -moz-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1F77D0), color-stop(100%, #533ce1));
-  background: -webkit-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-  background: -o-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-  background: -ms-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-  background: linear-gradient(to bottom, #1F77D0 0%, #533ce1 100%);
+  background: #68b5c0;
   background-size: 150% 150%;
 }
 .sidebar[data-color="azure"]:after,
@@ -492,7 +486,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .btn {
   border-width: 2px;
-  background-color: transparent;
+  background-color: #fff;
   font-weight: 400;
   opacity: 0.8;
   filter: alpha(opacity=80);
@@ -534,19 +528,20 @@ body > .navbar-collapse[data-color="purple"]:after {
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0 !important;
+  opacity: 1;
 }
 .btn.btn-icon {
   padding: 8px;
 }
 
 .btn-primary {
-  border-color: #3472F7;
-  color: #3472F7;
+  
+  color: #333;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
-  background-color: transparent;
-  color: #1D62F0;
-  border-color: #1D62F0;
+  background-color: #fff;
+  color: #333;
+  border-color: #333;
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary:disabled, .btn-primary:disabled:hover, .btn-primary:disabled:focus, .btn-primary:disabled.focus, .btn-primary:disabled:active, .btn-primary:disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
   background-color: transparent;
