--- a/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
@@ -31,7 +31,7 @@
                 </select>
             </li>-->
             <li class="active" style="padding: 10px 15px;">
-                <button type="button" class="form-control" id="generate">Click Me!</button>
+                <button type="button" class="form-control" id="generate">Submit</button>
             </li>
         </ul>
     </div>
