Changed button color back to white, lightened border

--- a/FirstIteration/Content/light-bootstrap-dashboard.css
+++ b/FirstIteration/Content/light-bootstrap-dashboard.css
@@ -539,9 +539,9 @@ body > .navbar-collapse[data-color="purple"]:after {
   color: #333;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
-  background-color: rgba(243, 255, 15, 0.89);
+  background-color: #fff;
   color: #333;
-  border-color: #333;
+  border-color: rgba(51, 51, 51, 0.71);
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary:disabled, .btn-primary:disabled:hover, .btn-primary:disabled:focus, .btn-primary:disabled.focus, .btn-primary:disabled:active, .btn-primary:disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
   background-color: transparent;
