--- a/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
+++ b/FirstIteration/Views/Chart/_FundingSourceDropDowns.cshtml
@@ -24,6 +24,10 @@
                     <option value="">--Select Fund Category--</option>
                 </select>
             </li>
+            <li style="padding: 10px 15px;">
+                <label for="sel1">Year:</label>
+                @Html.DropDownListFor(m => m.Departments, (IEnumerable<SelectListItem>)ViewBag.Year, "--Select Year--", new { @class = "form-control", id = "ddlyear" })
+            </li>
             <!--<li class="active" style="padding: 10px 15px;">
                 <label for="sel1">Funding Source:</label>
                 <select id="ddlfundcodename" name="staff_id" class="form-control">
